tm-core/tests/snapshots/ics_sample__rendered_lines_snapshot.snap
---
source: tm-core/tests/ics_sample.rs
expression: out
---
=== calendar/2026-W36.md
- [ ] 2 CS 234 lecture  at:2026-09-02T15:00/16:20 loc:JCL ^4xi5pn
- [ ] 2 CS 234 lecture  at:2026-09-04T15:00/16:20 loc:JCL ^etwrpt
=== calendar/2026-W37.md
- [ ] 3 Morning pages  at:2026-09-07T06:30/06:50 ^ztwcz2
- [ ] 3 Meeting w/ host  at:2026-09-07T12:50/13:50 loc:zoom ^jc2anp
- [ ] 3 Standup with the Berlin team  at:2026-09-08T09:00/09:30 ^ks5a9f
- [ ] 3 Focus block  at:2026-09-08T13:00/14:00 ^mwufzw
- [ ] 3 Morning pages  at:2026-09-09T06:30/06:50 ^x3x5rd
- [ ] 2 CS 234 lecture  at:2026-09-09T15:00/16:20 loc:JCL ^9u4pws
- [ ] 3 (review:) draft (@lab) (#ops)  at:2026-09-10T16:00/16:45 ^wtc24k
- [ ] 3 Dinner w/ Kun, then drinks  at:2026-09-10T19:00/20:00 loc:Kun's-place ^8cz4f2
- [ ] 3 Morning pages  at:2026-09-11T06:30/06:50 ^e2ddi7
- [ ] 1 ✈ UA 1234 ORD→SFO  at:2026-09-12T08:15/10:40 buffer:2h travel-day ^v79p6u
- [ ] 3 Morning pages  at:2026-09-13T06:30/06:50 ^qit7fx
=== calendar/2026-W38.md
- [ ] 3 Morning pages  at:2026-09-15T06:30/06:50 ^2hvz4u
- [ ] 3 Monthly 1:1 w/ advisor  at:2026-09-15T10:00/10:30 ^drb6zv
- [ ] 3 Conference day  at:2026-09-16T00:00/2026-09-17T00:00 ^2cithx
- [ ] 2 CS 234 lecture  at:2026-09-16T15:00/16:20 loc:JCL ^5mqkj3
- [ ] 3 Team retreat at the lake house  at:2026-09-18T09:00/2026-09-20T17:00 loc:Lake-House ^2upu36
- [ ] 2 CS 234 lecture  at:2026-09-18T15:00/16:20 loc:JCL ^jmvc49
